Many layout fixes. Looks better on mobile

--- a/client/less/app.less
+++ b/client/less/app.less
@@ -73,7 +73,7 @@ div{
 }
 
 .container{
-  padding-left: 300px;
+  // padding-left: 300px;
   transition: all 0.4s ease 0s;
   margin: 0;
   @media (min-width: 1200px){
@@ -96,21 +96,21 @@ div{
   }
 }
 
-#LeftPanel{
-	margin-left: -300px;
-	left: 300px;
-	width: 300px;
-	border-right: 1px solid #ddd;
-	padding: 0 2rem;
-	position: fixed;
-	height: 100%;
-	overflow-y: auto;
-	z-index: 1000;
-	transition: all 0.4s ease 0s;
-}
-#RightPanel{
-width: 100%;
-}
+// #LeftPanel{
+// 	margin-left: -300px;
+// 	left: 300px;
+// 	width: 300px;
+// 	border-right: 1px solid #ddd;
+// 	padding: 0 2rem;
+// 	position: fixed;
+// 	height: 100%;
+// 	overflow-y: auto;
+// 	z-index: 1000;
+// 	transition: all 0.4s ease 0s;
+// }
+// #RightPanel{
+// width: 100%;
+// }
 
 .centeredHeader{
   text-align: center;
