--- a/client/less/schedule.less
+++ b/client/less/schedule.less
@@ -1,22 +1,25 @@
-.mh-control{
-  margin-top: 1rem;
+.mh-control {
+    margin-top: 1rem;
 }
-
-.padding-top{
-  padding-top: 20px;
+.padding-top {
+    padding-top: 20px;
 }
-.padding-bottom{
-  padding-bottom: 20px;
+.padding-bottom {
+    padding-bottom: 20px;
 }
-
-#FilterMenu{
-  position: fixed;
-  background: white;
-  width: 100%;
-  z-index: 999;
-  border-bottom: 1px solid #ddd;
+#FilterMenu {
+    position: fixed;
+    background: white;
+    width: 70%;
+    z-index: 999;
+    border-bottom: 1px solid #ddd;
 }
-
-#MentorList{
-  margin-top: 12rem;
+#MentorList {
+    margin-top: 12rem;
+}
+.content {
+    margin-left: 300px;	
+    .col-sm-12 {
+        padding-right: 0;
+    }
 }
